--- a/public/layouts/v1/css/style.css
+++ b/public/layouts/v1/css/style.css
@@ -11,7 +11,7 @@ body{
 
 /* navbar */
 .nav-img{
-	width: 30px;
+    width: 30px;
     height: 30px;
     margin-right: 5px;
     margin-top: -10px;
@@ -20,4 +20,41 @@ body{
     border: 1px solid rgba(0,0,0,.5);
     box-shadow: 0px 0px 5px 5px rgba(255,255,255,.1) inset;
     padding: 2px;
+}
+.nav-icon{
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+    margin-top: -18px;
+    margin-bottom: -5px;
+    border-radius: 100%;
+    border: 1px solid rgba(0,0,0,.5);
+    box-shadow: 0px 0px 5px 5px rgba(255,255,255,.1) inset;
+    padding: 2px;
+    text-align: center;
+    line-height: 1.8;
+}
+.nav-icon i.badge{
+    position: absolute;
+    float: right;
+    text-align: center;
+    padding: 2px 0px;
+    font-size: 10px;
+    font-family: monospace;
+    color: white;
+    background-color: #F44336;
+    width: 20px;
+    height: 15px;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.5);
+    line-height: 1;
+    box-shadow: 1px 2px 2px rgba(0,0,0,.5);
+}
+.nav-list-menu{
+    
+}
+.nav-list-menu li{
+    
+}
+.nav-list-menu li a{
+    
 }
